final commit pushed

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         </div>
                         <div class="blog-info">
                             <h3 class="blog-title">UI cheat sheet: list Vs grids</h3>
-                            <p class="blog-author">By <a href="">Sraboni Bhuiyan</a></p>
+                            <p class="blog-author">By <a href="">Danny Sapio</a></p>
                         </div>
                     </article>
                     <article class="blog">
@@ -75,7 +75,7 @@
                         </div>
                         <div class="blog-info">
                             <h3 class="blog-title">10 typography tips for interface</h3>
-                            <p class="blog-author">By <a href="">Sraboni Bhuiyan</a></p>
+                            <p class="blog-author">By <a href="">Ferdinand Vogler</a></p>
                         </div>
                     </article>
                     <article class="blog">
@@ -84,7 +84,7 @@
                         </div>
                         <div class="blog-info">
                             <h3 class="blog-title">Your logo can be The Best</h3>
-                            <p class="blog-author">By <a href="">Sraboni Bhuiyan</a></p>
+                            <p class="blog-author">By <a href="">Tess Gadd</a></p>
                         </div>
                     </article>
                 </div>
@@ -123,7 +123,7 @@
                     </div>
                     <div class="course-detail">
                         <h3 class="course-title">Powerpoint 2020 Master Course</h3>
-                        <p class="course-author">Reed Krakoff.</p>
+                        <p class="course-author">Walter Scott</p>
                         <div class="course-info">
                             <div>
                                 <i class="fas fa-star filled"></i>
@@ -131,7 +131,7 @@
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star empty"></i>
-                                <span>4.5</span>
+                                <span>4</span>
                             </div>
                             <div class="course-duration">
                                 <i class="far fa-clock"></i>
