--- a/index.html
+++ b/index.html
@@ -11,7 +11,20 @@
 <body>
     <!--Header Start-->
     <header>
-        
+        <div class="heading-container">
+            <div class="menu-items">
+                <div class="logo">
+                    <img class="icon" src="images/icons/logo.png" alt="">
+                    <h3>Idea</h3>
+                </div>
+                <div class="menu">
+                    <p>Home</p>
+                    <p>About</p>
+                    <p>Work</p>
+                    <img src="images/icons/profile.png" alt="">
+                </div>
+            </div>
+        </div>
     </header>
     <!--Header End-->
 
